--- a/src/application/main.fxml
+++ b/src/application/main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.JeuController">
+<AnchorPane prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
      
     <Button fx:id="cpartie" layoutX="143.0" layoutY="379.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="236.0" text="CHARGER PARTIE" />
