--- a/src/application/application.css
+++ b/src/application/application.css
@@ -2,7 +2,8 @@
 #npartie, #cpartie, #nclose, #nnom, 
 #btnchien, #btnchat, #btnoiseau, #create, 
 #life, #sante, #jnom,
-#nourir, #laver, #soigner, #dormir, #divertir
+#nourir, #laver, #soigner, #dormir, #divertir,
+#charger
 
 {
 	-fx-font-size: 12px;
